exports[`<Checkbox /> renders matches previous snapshot 1`] = `
<div
  className="checkbox ">
  <label>
    <input
      aria-disabled={undefined}
      checked={false}
      className=""
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 2`] = `
<div
  className="checkbox ">
  <label>
    <input
      aria-disabled={undefined}
      checked={false}
      className=""
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 3`] = `
<div
  className="checkbox ">
  <label>
    <input
      aria-disabled={undefined}
      checked={false}
      className=""
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 4`] = `
<div
  className="checkbox ">
  <label>
    <input
      aria-disabled={undefined}
      checked={false}
      className=""
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 5`] = `
<div
  className="checkbox disabled">
  <label>
    <input
      aria-disabled={true}
      checked={false}
      className="disabled"
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> renders matches previous snapshot 6`] = `
<div
  className="checkbox ">
  <label>
    <input
      aria-disabled={false}
      checked={false}
      className=""
      id={undefined}
      onChange={[Function bound onChange]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span
      className="layer-label">
      testLabel
    </span>
  </label>
</div>
`;
